--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* 스타일을 컴포넌트화 하는 방법 */
+.btn {
+  @apply bg-gradient-to-tr from-cyan-500 via-blue-300 to-purple-400 text-white py-2 rounded-full transition-transform font-medium active:scale-90 focus:scale-90 peer-required:bg-green-500;
 }
